02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: watflix-web
  name: watflix-web
spec:
  revisionHistoryLimit: 5
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0%
  selector:
    matchLabels:
      app.kubernetes.io/name: watflix-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: watflix-web
    spec:
      containers:
        - name: watflix-web
          image: "509197451672.dkr.ecr.ap-northeast-2.amazonaws.com/watflix-app:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
      nodeSelector:
        nodeType: service-2023
      tolerations:
        - key: service
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
