03-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: watflix-web
  name: watflix-web
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: watflix-web
